--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,14 +26,18 @@ jobs:
         run: npm run test
       - name: heroku deploy
         uses: akhileshns/heroku-deploy@v3.12.12
-        if: join([${{ github.event_name == 'push' }}, "!contains(github.event.head_commit.message, '#skip')"])
+        if: |
+          ${{ github.event_name == 'push' }} ||
+          "!contains(github.event.head_commit.message, '#skip')"
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: full-stack-pokedex-jorgeii
           heroku_email: jorgemendozaiidev@gmail.com
   tag_release:
     needs: [simple_deployment_pipeline]
-    if: join([${{ github.event_name == 'push' }}, "!contains(github.event.head_commit.message, '#skip')"])
+    if: |
+      ${{ github.event_name == 'push' }} ||
+      "!contains(github.event.head_commit.message, '#skip')"
     runs-on: ubuntu-20.04
     steps:
       - name: Bump version and push tag
