--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,8 +27,8 @@ jobs:
       - name: heroku deploy
         uses: akhileshns/heroku-deploy@v3.12.12
         if: |
-          ${{ github.event_name == 'push' }} ||
-          "!contains(github.event.head_commit.message, '#skip')"
+          ${{ github.event_name == 'push' || 
+          !contains(github.event.head_commit.message, '#skip' }}
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: full-stack-pokedex-jorgeii
@@ -36,8 +36,8 @@ jobs:
   tag_release:
     needs: [simple_deployment_pipeline]
     if: |
-      ${{ github.event_name == 'push' }} ||
-      "!contains(github.event.head_commit.message, '#skip')"
+      ${{ github.event_name == 'push' || 
+      !contains(github.event.head_commit.message, '#skip' }}
     runs-on: ubuntu-20.04
     steps:
       - name: Bump version and push tag
