--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,22 +9,6 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  a_test_job:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-      - name: gihub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      - name: commits
-        env:
-          COMMITS: ${{ toJson(github.event.commits) }}
-        run: echo "$COMMITS"
-      - name: commit messages
-        env:
-          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        run: echo "$COMMIT_MESSAGES"
   simple_deployment_pipeline:
     runs-on: ubuntu-20.04
     steps:
@@ -42,18 +26,14 @@ jobs:
         run: npm run test
       - name: heroku deploy
         uses: akhileshns/heroku-deploy@v3.12.12
-        if: |
-          github.event_name == 'push' || 
-          !contains(github.event.head_commit.message, '#skip')
+        if: ${{!contains(github.event.commits.*.message, '#skip')}}
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: full-stack-pokedex-jorgeii
           heroku_email: jorgemendozaiidev@gmail.com
   tag_release:
     needs: [simple_deployment_pipeline]
-    if: |
-      github.event_name == 'push' || 
-      !contains(github.event.head_commit.message, '#skip')
+    if: ${{!contains(github.event.commits.*.message, '#skip')}}
     runs-on: ubuntu-20.04
     steps:
       - name: Bump version and push tag
